--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,20 @@ environment:
 
 dependencies:
   async_redux: ^6.0.3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+
   flutter:
     sdk: flutter
+
+  flutter_staggered_grid_view: ^0.3.3
+
   freezed_annotation: ^0.12.0
+
   mockito: ^4.1.3
+
   uuid: ^2.2.2
 
 dev_dependencies:
