--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,13 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
-      - uses: subosito/flutter-action@v1
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v1
         with:
           channel: "beta"
-      - run: flutter pub get
-      - run: flutter analyze
-      - run: flutter test
+      - name: Install Dependencies
+        run: flutter pub get
+      - name: Test
+        run: flutter test
+      - name: Code Lint
+        uses: zgosalvez/github-actions-analyze-flutter@v1
